fix(price): changed some for service model
