# src/main/controllers/service/ServiceController.js
@@ -1,17 +1,17 @@
 import * as priceService from "../../service/price/PriceService.js";
-import {PriceType} from "../../dto/price/Pirce.dto.js";
+import {ServiceType} from "../../dto/serivce/Service.dto.js";
 import {asyncHandler} from "../../utils/handler/asyncHandler.js";
 import { createBaseController } from "../base/BaseController.js";
 import logger from "../../utils/winston/logger.js";
 
 const base = createBaseController(priceService);
 
-export const getAllPrices = base.getAll;
+export const getAllServices = base.getAll;
 
-export const getPriceByType = asyncHandler(async (req, res) => {
+export const getServiceByType = asyncHandler(async (req, res) => {
     const type = req.params.type;
-    if (!PriceType.safeParse(type).success) {
-        logger.warn('Invalid price type', {
+    if (!ServiceType.safeParse(type).success) {
+        logger.warn('Invalid service type', {
             userId: req.user?.id || null,
             endpoint: req.originalUrl,
             requestId: req.id,
@@ -20,7 +20,7 @@ export const getPriceByType = asyncHandler(async (req, res) => {
         return res.status(400).json({ error: 'Invalid type' });
     }
     const result = await priceService.getByType(req.params.type);
-    logger.info('Fetched prices by type', {
+    logger.info('Fetched service by type', {
         userId: req.user?.id || null,
         endpoint: req.originalUrl,
         requestId: req.id,
@@ -30,9 +30,9 @@ export const getPriceByType = asyncHandler(async (req, res) => {
     res.json(result);
 });
 
-export const createPrice = asyncHandler(async (req, res) => {
+export const createService = asyncHandler(async (req, res) => {
     const result = await priceService.create(req.body);
-    logger.info('Created new price', {
+    logger.info('Created new service', {
         userId: req.user?.id || null,
         endpoint: req.originalUrl,
         requestId: req.id,
@@ -41,9 +41,9 @@ export const createPrice = asyncHandler(async (req, res) => {
     res.status(201).json(result);
 });
 
-export const updatePrice = base.update;
+export const updateService = base.update;
 
-export const deletePrice = base.delete;
+export const deleteService = base.delete;
 
 export const calculatePrice = asyncHandler(async (req, res) => {
     await priceService.calculate(req.body, res);
